<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">汤山城管通</string>
    <string name="action_search">搜索</string>
    <string name="action_add">添加</string>
    <string name="action_remove">删除</string>
    <string name="action_accept">确定</string>
    <string name="action_cancel">取消</string>
    <string name="action_sign">收录</string>
    <string name="action_unsign">退件</string>
    <string name="action_save">保存</string>
    <string name="action_report">上报</string>
    <string name="action_handin">提交</string>
    <string name="action_history">历史</string>
    <string name="hello_world">Hello world!</string>
    <string name="case_report">问题上报</string>
    <string name="case_details">案件详情</string>
    <string name="case_verify">待核实</string>
    <string name="case_inspect">待核查</string>
    <string name="case_process">待处理</string>
    <string name="search_hint">事件编号、描述等</string>
    <string name="content_new">新建</string>
    <string name="loading">加载中...</string>
    <string name="case_type">事件类型</string>
    <string name="condition">立案条件</string>
    <string name="category_1">大类</string>
    <string name="category_2">小类</string>
    <string name="category_3">子类</string>
    <string name="case_peroid">时间段</string>
    <string name="case_report_date">上报时间</string>
    <string name="no_location">无法获取当前位置</string>
    <string name="setting">设置</string>
    <string name="open_gps">开启GPS来获得精确位置</string>
    <string name="open_gps_later">稍后请手动开启GPS</string>
    <string name="no_network">请联网后重试！</string>
    <string name="repeat_offline">请勿重复下线！</string>
    <string name="repeat_online">请勿重复上线！</string>
    <string name="no_gps_location">上线失败，请待GPS位置固定后重试！</string>
    <string name="upload_no_network">位置上传失败，请联网！</string>
    <string name="upload_no_gps">位置上传失败，请打开GPS后重试！</string>
    <string name="type_1">部件</string>
    <string name="type_2">事件</string>
    <string name="haveProblem">有问题</string>
    <string name="haveNoProblem">无问题</string>
    <string name="emergency_normal">正常</string>
    <string name="emergency_urgent">紧急</string>
    <string name="pass">通过</string>
    <string name="failed">不通过</string>
    <string name="login">登录</string>
    <string name="logining">登录中...</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="verifyFailed">用户名或者密码错误，登录失败!</string>
    <string name="remember_me">记住我</string>
    <string name="auto_login">自动登录</string>
    <string name="alert_dialog_ok">确定</string>
    <string name="alert_dialog_add">添加</string>
    <string name="sure_to_delete">确定删除？</string>
    <string name="alert_dialog_cancel">取消</string>
    <string name="hint">提示</string>
    <string name="logout_detail">现在下线吗?</string>
    <string name="event_type">事件类型:</string>
    <string name="new_event">新建事件</string>
    <string name="event_info">问题描述（必填）:</string>
    <string name="addr_info">当前位置（必填）:</string>
    <string name="event_date">日期:</string>
    <string name="event_time">时间:</string>
    <string name="upload_image">添加照片</string>
    <string name="take_photo">拍  照</string>
    <string name="openImage">浏  览</string>
    <string name="upload_sound">添加录音</string>
    <string name="record_sound">录  音</string>
    <string name="save">保   存</string>
    <string name="upload">上报事件</string>
    <string name="cancel">取   消</string>
    <string name="album_name">城管通</string>
    <string name="choose_img">请选择图片</string>
    <string name="startRecording">开始录音</string>
    <string name="stopRecording">结束录音</string>
    <string name="startPlaying">播  放</string>
    <string name="stopPlaying">停  止</string>
    <string name="finish">完  成</string>
    <string name="use_current_loc">使用当前</string>
    <string name="manual_get_loc">手动选点</string>
    <string name="current_loc">当前位置</string>
    <string name="copyright_1">© 格网科技.</string>
    <string name="copyright_2">版权所有.</string>
    <string name="prefs_interval">自动上传位置间隔</string>
    <string name="default_prefs_interval">5</string>
    <string name="summary_prefs_interval">0分钟</string>
    <string name="prefs_common_comments">常用语</string>
    <string name="summary_common_comments">提前输入的一些常用语句</string>
    <string name="settings">参数设置</string>
    <string name="common_comments">常用语列表</string>
    <string name="alert_dialog_download">更新</string>
    <string name="alert_dialog_no">暂不</string>
    <string name="alert_dialog_warning">警告</string>
    <string name="no_data">无数据</string>
    <string name="account_null">帐号或密码不能为空！</string>
    <string name="no_image">图片不能为空！</string>
    <string name="dialog_msg_report">确定上报？</string>
    <string name="dialog_msg_sign">确定收录？</string>
    <string name="dialog_msg_unsign">确定取消收录？</string>

    <string-array name="menu_list">
        
        <item name="login">上线</item>
        <item name="bus">今日推送</item>
        <item name="zxqj">在线请假</item>
        <item name="route">绩效考核</item>
        <item name="interest">系统帮助</item>
        <item name="fcmap">参数设置</item>
        <item name="download">底图更新</item>
        <item name="declaration">检测更新</item>
        <item name="exit">下线</item>
    </string-array>
    <string-array name="case_type_array">
        <item>所有事件类型</item>
        <item>市政公用设施</item>
        <item>道路交通</item>
        <item>市容环境</item>
        <item>园林绿化</item>
        <item>房屋建筑</item>
        <item>其他设施</item>
        <item>扩展类别</item>
        <item>市容环境</item>
        <item>宣传广告</item>
        <item>施工管理</item>
        <item>突发事件</item>
        <item>街面秩序</item>
        <item>扩展事件</item>
    </string-array>
    <string-array name="case_period_array">
        <item>所有时间段</item>
        <item>本日</item>
        <item>本周</item>
        <item>本月</item>
    </string-array>
    <string-array name="leave_array">
        <item>年假</item>
        <item>事假</item>
        <item>调休假</item>
        <item>丧假</item>
    </string-array>
    <string-array name="prefs_interval_entries_array">
        <item>永不</item>
        <item>5分钟</item>
        <item>10分钟</item>
        <item>30分钟</item>
        <item>1小时</item>
    </string-array>
    <string-array name="prefs_interval_entries_value_array">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string-array name="case_condition_array">
        <item>请选择</item>
    </string-array>

    <string name="start_date">开始日期</string>
    <string name="time">时间</string>
    <string name="endtime">结束日期</string>
    <string name="title_activity_askfor_leave">在线请假</string>
    <string name="action_settings">Settings</string>
    <string name="leave_prompt">请假类型</string>
    <string name="leave_reason">请假理由</string>
    <string name="exit_detail">确定要退出?</string>
    <string name="title_activity_pick">手动选点</string>
    <string name="title_locate_case">案件位置</string>
    <string name="title_activity_performance">绩效考核</string>
    <string name="performance_date">选择日期进行查询</string>
    <string name="title_activity_leave_history">请假历史记录</string>
    <string name="title_activity_push">今日推送</string>
    <string name="tip_have_done">该案件已被处理,请选择其他案件</string>
    <string name="title_activity_delay">申请延时</string>
    <string name="action_delay">申请延时</string>
    <string name="action_delay_check">查看延时</string>
    <string name="title_delay_check">查看延时</string>
    <string name="action_reject">拒签</string>
    <string name="action_reject_check">查看拒签</string>
    <string name="title_reject_check">查看拒签</string>
    <string name="action_postpone">缓办</string>
    <string name="action_postpone_check">查看缓办</string>
    <string name="title_postpone_check">查看缓办</string>
    <string name="title_postpone">申请缓办</string>
    <string name="delay_days">请输入申请天数</string>
    <string name="delay_reason">请输入申请理由</string>
    <string name="btn_submit">提 交</string>
    <string name="btn_reject_again">再次拒签</string>
    <string name="title_activity_delay_check">查看延时</string>
    <string name="title_layer_manage">底图管理</string>
    <string name="delay_check_date">申请日期：</string>
    <string name="delay_check_day">申请天数：</string>
    <string name="delay_check_reason">延时理由：</string>
    <string name="delay_check_person">审批人员：</string>
    <string name="delay_check_status">审批状态：</string>
    <string name="delay_check_advice">审批意见：</string>
    <string name="delay_approve_days">批准天数：</string>
    <string name="delay_check_date2">审批日期：</string>
    <string name="submit_success">提交成功！</string>
    <string name="submit_failure">提交失败！</string>
    <string name="reject_success">拒签成功！</string>
    <string name="reject_failure">拒签失败！</string>
    <string name="sign_success">收录成功！</string>
    <string name="sign_failure">收录失败！</string>
    <string name="unsign_success">取消收录成功！</string>
    <string name="unsign_failure">取消收录失败！</string>
    <string name="hint_reject_reason">请输入拒签原因</string>
    <string name="use_map_center">使用气泡位置</string>
    <string name="locate_desc">位置</string>
    <string name="title_activity_reject_check">查看拒签</string>
    <!-- 网络状态 -->
    <string name="connection_timeout">网络连接超时，请重新连接！</string>
    <!-- 下拉刷新列表 -->
    <string name="pull_to_refresh">下拉可更新</string>
    <string name="release_to_refresh">松开后更新</string>
    <string name="last_update">上次更新：</string>
    <string name="tip_refuse_delete">温馨提示：该案件不允许删除</string>
    <string name="msg_delete">确定要删除?</string>
    <string name="title_activity_score">ScoreActivity</string>

</resources>