<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/report"
        android:orderInCategory="0"
        android:showAsAction="always|withText"
        android:title="@string/action_report"/>
    <item
        android:id="@+id/save"
        android:orderInCategory="1"
        android:showAsAction="always|withText"
        android:title="@string/action_save"/>
    <item
        android:id="@+id/cancel"
        android:orderInCategory="2"
        android:showAsAction="always|withText"
        android:title="@string/action_cancel"/>
    <item
        android:id="@+id/sign"
        android:orderInCategory="3"
        android:showAsAction="always|withText"
        android:title="@string/action_sign"
        android:visible="false"/>
    <item
        android:id="@+id/unsign"
        android:orderInCategory="4"
        android:showAsAction="always|withText"
        android:title="@string/action_unsign"
        android:visible="false"/>
    <!-- orderInCategory：item的优先级，值越大优先级越低，actionbar地方不够就会放到overflow中 -->
    <item
        android:id="@+id/reject"
        android:orderInCategory="5"
        android:showAsAction="collapseActionView"
        android:title="@string/action_reject"
        android:visible="false"/>
    <item
        android:id="@+id/delay"
        android:orderInCategory="6"
        android:showAsAction="collapseActionView"
        android:title="@string/action_delay"
        android:visible="false"/>
    <item
        android:id="@+id/postpone"
        android:orderInCategory="7"
        android:showAsAction="collapseActionView"
        android:title="@string/action_postpone"
        android:visible="false"/>

</menu>