<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF313131"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignRight="@+id/etPassword"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textSize="18sp" />


    <ProgressBar
        android:id="@+id/pb_loading_vpn"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignTop="@+id/btnLogin"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="11dp"
        android:minHeight="40dp"
        android:minWidth="40dp"
        android:visibility="gone" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etUser"
        android:layout_alignRight="@+id/etUser"
        android:layout_below="@+id/etUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingLeft="5dp" >
    </EditText>

    <EditText
        android:id="@+id/etUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerInParent="true"
        android:layout_centerVertical="false"
        android:ems="10"
        android:hint="@string/username"
        android:imeOptions="actionNext"
        android:paddingLeft="5dp"
        android:singleLine="true" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/etUser"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/app_icon_login" />


    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/btnLogin"
        android:layout_alignTop="@+id/btnLogin"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="11dp"
        android:minHeight="40dp"
        android:minWidth="40dp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_1"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_2"
            android:textSize="12sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="gone" >

        <CheckBox
            android:id="@+id/ckBox_remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me" />

        <CheckBox
            android:id="@+id/ckBox_auto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_login" />
    </LinearLayout>

</RelativeLayout>