<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.geone.inspect.threepart_ts.activity.AskforLeaveActivity$PlaceholderFragment" >

    <EditText
        android:id="@+id/et_starttime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_startdate"
        android:layout_alignBottom="@+id/et_startdate"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/et_startdate"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/time"
        android:inputType="time" />

    <EditText
        android:id="@+id/et_startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/start_date"
        android:inputType="date" />

    <EditText
        android:id="@+id/et_endtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/et_enddate"
        android:layout_alignBottom="@+id/et_enddate"
        android:layout_alignLeft="@+id/et_starttime"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/time"
        android:inputType="time" />

    <EditText
        android:id="@+id/et_enddate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_startdate"
        android:layout_below="@+id/et_startdate"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/endtime"
        android:inputType="date" >
    </EditText>

    <Spinner
        android:id="@+id/spin_leavetype"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_enddate"
        android:layout_alignRight="@+id/et_endtime"
        android:layout_below="@+id/et_enddate"
        android:layout_marginTop="20dp"
        android:prompt="@string/leave_prompt" />

    <EditText
        android:id="@+id/et_leave_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spin_leavetype"
        android:layout_alignRight="@+id/spin_leavetype"
        android:layout_below="@+id/spin_leavetype"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/leave_reason"
        android:inputType="textMultiLine" >

    </EditText>

</RelativeLayout>