<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.geone.inspect.threepart_ts.activity.DelayPostponeActivity" >

    <EditText
        android:id="@+id/etxtDelayDays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/delay_days"
        android:inputType="number" >
    </EditText>

    <EditText
        android:id="@+id/etxtDelayReason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/delay_reason"
        android:inputType="textMultiLine" >
    </EditText>

    <Button
        android:id="@+id/btnSubmitDelay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_blue"
        android:text="@string/btn_submit"
        android:textColor="@color/fontWhite"
        android:textSize="16sp" />

</LinearLayout>