<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:paddingBottom="3dp" >

            <WebView
                android:id="@+id/webHSHCCL"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />

            <ProgressBar
                android:id="@+id/progressBar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/layout_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:paddingTop="10dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingRight="3dp" >

                    <TextView
                        android:id="@+id/tv_suggest_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="核实意见:"
                        android:textSize="17sp" />

                    <Switch
                        android:id="@+id/switch1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:switchTextAppearance="@style/SwitchTextAppearance"
                        android:textOff="@string/haveNoProblem"
                        android:textOn="@string/haveProblem"
                        android:thumb="@drawable/switch_inner_holo_light"
                        android:thumbTextPadding="10dp"
                        android:track="@drawable/switch_track_holo_light" />

                    <Button
                        android:id="@+id/btnLocateCase"
                        style="@style/LittleLightButtonStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginLeft="5dp"
                        android:paddingBottom="1dp"
                        android:paddingTop="1dp"
                        android:text="@string/locate_desc"
                        android:textSize="14sp" />
                </LinearLayout>

                <AutoCompleteTextView
                    android:id="@+id/autoSuggestDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="意见描述:"
                    android:inputType="textMultiLine"
                    android:visibility="visible" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:paddingRight="5dp" >

                    <HorizontalScrollView
                        android:id="@+id/horizontalScrollView1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:scrollbars="@null" >

                        <LinearLayout
                            android:id="@+id/layout_gallery"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" >
                        </LinearLayout>
                    </HorizontalScrollView>

                    <ImageButton
                        android:id="@+id/btn_take_photo"
                        android:layout_width="171px"
                        android:layout_height="171px"
                        android:background="@drawable/button_take_photo" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical"
                    android:paddingRight="5dp" >

                    <HorizontalScrollView
                        android:id="@+id/horizontalScrollView2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:scrollbars="@null" >

                        <LinearLayout
                            android:id="@+id/layout_sounds"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal" >
                        </LinearLayout>
                    </HorizontalScrollView>

                    <ImageButton
                        android:id="@+id/btn_record_sound"
                        android:layout_width="171px"
                        android:layout_height="171px"
                        android:background="@drawable/button_record_sound" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_bottom_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#901C1C1C"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="15dp"
        android:visibility="gone" >

        <Button
            android:id="@+id/btn_takephoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_menu_takephoto"
            android:text="拍照"
            android:textColor="@color/fontBlack"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_pickphoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:background="@drawable/button_menu_takephoto"
            android:text="从手机相册中选择"
            android:textColor="@color/fontBlack"
            android:textSize="17sp" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/button_menu_cancel"
            android:text="取消"
            android:textColor="@color/fontWhite"
            android:textSize="17sp" />
    </LinearLayout>

</RelativeLayout>